--- a/index.html
+++ b/index.html
@@ -1,19 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
-<div class=top-container>
 
-    <nav class="sidebar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero modi, suscipit qui sapiente amet accusantium quidem perspiciatis dolore nulla officia, quaerat autem eos maxime assumenda neque est aliquid, tempora delectus!</nav>
-    <div class= "content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis ullam accusamus itaque reiciendis magnam neque minus hic eius, rerum esse, adipisci, sed corporis. Quisquam sapiente quia, aperiam obcaecati quos ullam.</div>
-</div>
+    <div class=container>
+
+
+        <nav class="sidebar">
+            <div class="menu">
+
+                <li><img src="./spotify/img/home.svg" alt="Icona Home"> Home</li>
+                <li><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</li>
+                <li><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua libreria</li>
+
+                <ul>
+                    <li>PLAYLIST</li>
+                    <li>Crea Playlist</li>
+                </ul>
+
+                <ul>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+
+
+
+
+                </ul>
+            </div>
+        </nav>
+
+
+        <div class="top-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="top-frame">
+                        <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis ullam
+                            accusamus itaque reiciendis magnam neque minus hic eius, rerum esse, adipisci, sed corporis.
+                            Quisquam sapiente quia, aperiam obcaecati quos ullam.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
 </body>
+
 </html>
-
-
