commit-headerlogo-navbar-adjstuments

--- a/index.html
+++ b/index.html
@@ -12,49 +12,59 @@
 
 <body>
 
-    <div class=container>
-
-
-        <nav class="sidebar">
-            <div class="menu">
-
-                <li><img src="./spotify/img/home.svg" alt="Icona Home"> Home</li>
-                <li><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</li>
-                <li><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua libreria</li>
-
-                <ul>
-                    <li>PLAYLIST</li>
-                    <li>Crea Playlist</li>
-                </ul>
-
-                <ul>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
+    <div class="header">
+        <div class="logo-header">
+            <div class="logo"><style></style><img src="./spotify/img/logo.svg"></div>
+        </div>
+        <div class=""
+    </div>
+    
 
 
 
 
-                </ul>
-            </div>
-        </nav>
+    <nav class="sidebar">
+        <div class="menu">
 
 
-        <div class="top-container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="top-frame">
-                        <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis ullam
-                            accusamus itaque reiciendis magnam neque minus hic eius, rerum esse, adipisci, sed corporis.
-                            Quisquam sapiente quia, aperiam obcaecati quos ullam.</div>
-                    </div>
+
+
+            <li><img src="./spotify/img/home.svg" alt="Icona Home"> Home</li>
+            <li><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</li>
+            <li><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua libreria</li>
+            <br>
+            <br>
+            <ul>
+                <li>PLAYLIST</li>
+                <li>Crea Playlist</li>
+            </ul>
+
+            <ul>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+
+
+
+
+            </ul>
+        </div>
+    </nav>
+
+
+    <div class="top-container">
+        <div class="row">
+            <div class="col-12">
+                <div class="top-frame">
+                    <div class="content"></div>
                 </div>
             </div>
         </div>
+    </div>
 
 
 
