--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify</title>
 
 
     <link rel="stylesheet" href="css/style.css">
@@ -73,6 +73,12 @@
 
 
         <!----------------------Section Top Bar--------------------->
+
+
+         <!----------------------Section Card--------------------->
+
+
+         
 
 
 </body>
