hover adjustments commit

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <div class="content">
                 <div class="col-2">
                     <div class="card">
-                        <div class="img-container">
-                            <img src="./spotify/img/metal_lifting.jpg" alt="Heavy Metal">
+                        <div class="img container">
+                            <img src="./spotify/img/metal_lifting.jpg">
                             <div class="play-icon">
                                 <img src="./spotify/img/play.png" alt="Play">
                             </div>
                         </div>
-
+                      
                         <div class="title">
                             <p> Heavy Metal</p>
                             <p>Subtitle</p>
