commit-section-choice-menu

--- a/index.html
+++ b/index.html
@@ -65,7 +65,19 @@
 
 
             <!-----------section content-------------->
+            <div class="content-choice">
 
+                <div class="content-choice-menu">
+
+                    <a href="evidence">IN EVIDENZA</a>
+                    <a href="podcast">PODCAST</a>
+                    <a href="position">CLASSIFICHE</a>
+                    <a href="type">GENERI E MOOD</a>
+                    <a href="new">NUOVE USCITE</a>
+                    <a href="find-out">SCOPRI</a>
+                </div>
+
+            </div>
 
             <div class="content-title">
                 Recently played:
@@ -80,7 +92,7 @@
                                 <img src="./spotify/img/play.png" alt="Play">
                             </div>
                         </div>
-                      
+
                         <div class="title">
                             <p> Heavy Metal</p>
                             <p>Subtitle</p>
