commit strcture adjustments

--- a/index.html
+++ b/index.html
@@ -14,146 +14,145 @@
 
     <div class="container">
 
+        <div class="top">
+
+            <!------------Section navigation bar -------------->
+            <div class="nav-col-2">
+                <nav class="sidebar">
+                    <div class="menu">
+                        <div class="logo-header">
+                            <div class="logo"> <img src="./spotify/img/logo.svg"></div>
+                        </div>
 
 
-        <!------------Section navigation bar -------------->
-        <div class="nav-col-2">
-            <nav class="sidebar">
-                <div class="menu">
-                    <div class="logo-header">
-                        <div class="logo"> <img src="./spotify/img/logo.svg"></div>
+                        <li><img src="./spotify/img/home.svg" alt="Icona Home"> Home</li>
+                        <li><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</li>
+                        <li><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua libreria</li>
+                        <br>
+                        <br>
+                        <ul>
+                            <li>PLAYLIST</li>
+                            <li>Crea Playlist</li>
+                        </ul>
+
+                        <ul>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+
+
+
+
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
+            <div class="col-8">
+
+                <div class="top-bar">
+                    <div class="top-btn">
+                        <button class="upgrade-btn">
+                            <p>EFFETTUA L'UPGRADE</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="bottom">
+
+                <!-----------section content-------------->
+                <div class="content-choice">
+
+                    <div class="content-choice-menu">
+
+                        <a href="evidence">IN EVIDENZA</a>
+                        <a href="podcast">PODCAST</a>
+                        <a href="position">CLASSIFICHE</a>
+                        <a href="type">GENERI E MOOD</a>
+                        <a href="new">NUOVE USCITE</a>
+                        <a href="find-out">SCOPRI</a>
                     </div>
 
-
-                    <li><img src="./spotify/img/home.svg" alt="Icona Home"> Home</li>
-                    <li><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</li>
-                    <li><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua libreria</li>
-                    <br>
-                    <br>
-                    <ul>
-                        <li>PLAYLIST</li>
-                        <li>Crea Playlist</li>
-                    </ul>
-
-                    <ul>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-
-
-
-
-                    </ul>
-                </div>
-            </nav>
-        </div>
-
-        <div class="col-8">
-
-            <div class="top-bar">
-                <div class="top-btn">
-                    <button class="upgrade-btn">
-                        <p>EFFETTUA L'UPGRADE</p>
-                    </button>
-                </div>
-            </div>
-
-
-
-            <!-----------section content-------------->
-            <div class="content-choice">
-
-                <div class="content-choice-menu">
-
-                    <a href="evidence">IN EVIDENZA</a>
-                    <a href="podcast">PODCAST</a>
-                    <a href="position">CLASSIFICHE</a>
-                    <a href="type">GENERI E MOOD</a>
-                    <a href="new">NUOVE USCITE</a>
-                    <a href="find-out">SCOPRI</a>
                 </div>
 
-            </div>
+                <div class="content-title">
+                    Recently played:
+                </div>
 
-            <div class="content-title">
-                Recently played:
-            </div>
+                <div class="content">
+                    <div class="col-2">
+                        <div class="card">
+                            <div class="img container">
+                                <img src="./spotify/img/metal_lifting.jpg">
+                                <div class="play-icon">
+                                    <img src="./spotify/img/play.png" alt="Play">
+                                </div>
+                            </div>
 
-            <div class="content">
-                <div class="col-2">
-                    <div class="card">
-                        <div class="img container">
-                            <img src="./spotify/img/metal_lifting.jpg">
-                            <div class="play-icon">
-                                <img src="./spotify/img/play.png" alt="Play">
+                            <div class="title">
+                                <p> Heavy Metal</p>
+                                <p>Subtitle</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card">
+                            <img src="./spotify/img/stranger.jpeg">
+                            <div class="title">
+                                <p> Stranger things</p>
+                                <p>Kyle Dixon & Michael Stein</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card">
+                            <img src="./spotify/img/aquietplace.jpeg">
+                            <div class="title">
+                                <p> Heavy Metal</p>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card">
+                            <img src="./spotify/img/split.jpeg">
+                            <div class="title">
+                                <p> Heavy Metal</p>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card">
+                            <img src="./spotify/img/cure.jpeg">
+                            <div class="title">
+                                <p>A cure for wellness</p>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card">
+                            <img src="./spotify/img/sinister.jpeg">
+                            <div class="title">
+                                <p> Heavy Metal</p>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                        <div class="title">
-                            <p> Heavy Metal</p>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="./spotify/img/stranger.jpeg">
-                        <div class="title">
-                            <p> Stranger things</p>
-                            <p>Kyle Dixon & Michael Stein</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="./spotify/img/aquietplace.jpeg">
-                        <div class="title">
-                            <p> Heavy Metal</p>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="./spotify/img/split.jpeg">
-                        <div class="title">
-                            <p> Heavy Metal</p>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="./spotify/img/cure.jpeg">
-                        <div class="title">
-                            <p>A cure for wellness</p>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="card">
-                        <img src="./spotify/img/sinister.jpeg">
-                        <div class="title">
-                            <p> Heavy Metal</p>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                </div>
             </div>
-
         </div>
+
+
+     </div>
     </div>
-    </div>
-    </div>
-
-
-
-
 
 
 
