--- a/index.html
+++ b/index.html
@@ -100,54 +100,61 @@
                                     </div>
                                 </div>
 
-                                <div class="title">
-                                    <p> Heavy Metal</p>
-                                    <p>Subtitle</p>
+                                <div class="description">
+                                    <div class="title"><p>Heavy Metal</p></div>
+                                    <p class="subtitle">Subtitle</p>
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="col-2">
                             <div class="card">
                                 <img src="./spotify/img/stranger.jpeg">
-                                <div class="title">
-                                    <p> Stranger things</p>
-                                    <p>Kyle Dixon & Michael Stein</p>
+                                <div class="description">
+                                    <div class="title"><p>Stranger things</p></div>
+                                    <p class="subtitle">Kyle Dixon & Michael Stein</p>
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="col-2">
                             <div class="card">
                                 <img src="./spotify/img/aquietplace.jpeg">
-                                <div class="title">
-                                    <p> Heavy Metal</p>
-                                    <p>Subtitle</p>
+                                <div class="description">
+                                    <div class="title"><p>A quiet place</p></div>
+                                    <p class="subtitle">Subtitle</p>
                                 </div>
                             </div>
                         </div>
+
+
+
                         <div class="col-2">
                             <div class="card">
                                 <img src="./spotify/img/split.jpeg">
-                                <div class="title">
-                                    <p> Heavy Metal</p>
-                                    <p>Subtitle</p>
+                                <div class="description">
+                                    <div class="title"><p>Split</p></div>
+                                    <p class="subtitle">Subtitle</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="card">
                                 <img src="./spotify/img/cure.jpeg">
-                                <div class="title">
-                                    <p>A cure for wellness</p>
-                                    <p>Subtitle</p>
+                                <div class="description">
+                                    <div class="title"><p>A cure for wellness</p></div>
+                                    <p class="subtitle">Subtitle</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="card">
                                 <img src="./spotify/img/sinister.jpeg">
-                                <div class="title">
-                                    <p> Heavy Metal</p>
-                                    <p>Subtitle</p>
+                                <div class="description">
+                                    <div class="title"><p>Sinister</p></div>
+                                    <p class="subtitle">Subtitle</p>
                                 </div>
                             </div>
                         </div>
