sidebar-adjustments-commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-<!--------------------------------------------------------------Section side-bar -------------------------------------------------------->
+    <!--------------------------------------------------------------Section side-bar -------------------------------------------------------->
     <div class="container">
 
         <div class="top">
@@ -31,14 +31,18 @@
                             <div class="logo"> <img src="./spotify/img/logo.svg"></div>
                         </div>
 
-                        <div class="list-menu">
-                            <ul>
-                                <li><img src="./spotify/img/home.svg" alt="Icona Home"> Home</li>
-                                <li><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</li>
-                                <li><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua libreria</li>
-                            </ul>
+                        <div class="menu-home">
 
+                            <a href=""><img src="./spotify/img/home.svg" alt="Icona Home">Home</a>
 
+                            <div class="list-menu">
+
+                                <a href=""><img src="./spotify/img/search.svg" alt="Icona Cerca"> Cerca</a>
+                                <a href=""><img src="./spotify/img/libreria.svg" alt="Icona Libreria"> La tua
+                                    libreria</a>
+
+                                <div class="title-playlist"><a href="">PLAYLIST</a></div>
+                            </div>
                             <br>
                             <div class="playlist">
 
@@ -57,12 +61,13 @@
                                 </ul>
                             </div>
 
+
                         </div>
 
                     </div>
                 </nav>
             </div>
-<!-----------section top bar----------------------------------------------------------------------------------------->
+            <!-----------section top bar----------------------------------------------------------------------------------------->
             <div class="col-8">
 
                 <div class="top-bar">
@@ -73,7 +78,7 @@
                     </div>
                 </div>
 
-<!-----------section content----------------------------------------------------------------------------------------->
+                <!-----------section content----------------------------------------------------------------------------------------->
                 <div class="bottom">
 
 
@@ -90,11 +95,11 @@
                         </div>
 
                     </div>
-
+                    <!------------------------------------------------------Section Recently Played-------->
                     <div class="content-title">
                         Recently played:
                     </div>
-<!----------------------------------------------------------Section cards----------------------------------------->
+                    <!----------------------------------------------------------Section cards----------------------------------------->
                     <div class="content">
                         <div class="col-2">
                             <div class="card">
@@ -195,7 +200,7 @@
 
 
 
-    
+
 </body>
 
 </html>
