--- a/index.html
+++ b/index.html
@@ -125,11 +125,13 @@
                             <div class="card">
                                 <img src="./spotify/img/stranger.jpeg">
                                 <div class="play-icon">
-                                   
+
                                 </div>
                                 <div class="description">
                                     <div class="title">
-                                        <p>Stranger things</p>
+                                        <p>Stranger Things Vol.</p>
+                                        <p>1 (a Netflix Original</p>
+                                        <p>Series Soundtrack.)</p>
                                     </div>
                                     <div class="subtitle">Kyle Dixon & Michael Stein</div>
                                 </div>
@@ -186,19 +188,51 @@
                         </div>
                     </div>
 
+
+                    <!------John Doe content section-->
+
+                    <div class="jd">
+                        <div class="jd-title">Creato per John Doe</div>
+                        <div class="suggestions">Più ascolti, più saranno accurati i suggerimenti</div>
+
+                    </div>
+                    <div class="jd-container">
+                        <div class="jd-content">
+                            <div class="jd-col-2">
+                                <div class="card">
+
+                                    <img src="./spotify/img/player_left.jpg">
+                                    </div>
+                                </div>
+
+                                <div class="jd-col-2">
+                                    <div class="card">
+                                        <img src="./spotify/img/mixdaily.jpeg">
+                                        <div class="play-icon">
+
+                                        </div>
+                                        <div class="description">
+                                            <div class="title">
+                                                <p>Daily Mix 1</p>
+                                            </div>
+                                            <div class="subtitle">Kyle Dixon & Michael Stein</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+
+                    </div>
                 </div>
-            </div>
-
-
-        </div>
-    </div>
 
 
 
-    <!----------------------Section Top Bar--------------------->
+                <!----------------------Section Top Bar--------------------->
 
 
-    <!----------------------Section Card--------------------->
+                <!----------------------Section Card--------------------->
 
 
 
